RESOLVED FIXED161750
Don't run transitions to or from undefined Lengths
https://bugs.webkit.org/show_bug.cgi?id=161750
Summary Don't run transitions to or from undefined Lengths
Simon Fraser (smfr)
Reported 2016-09-08 12:27:11 PDT
Don't run transitions to or from undefined Lengths
Attachments
Patch (5.54 KB, patch)
2016-09-08 12:29 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2016-09-08 12:29:12 PDT
WebKit Commit Bot
Comment 2 2016-09-08 13:56:25 PDT
Comment on attachment 288305 [details] Patch Clearing flags on attachment: 288305 Committed r205659: <http://trac.webkit.org/changeset/205659>
WebKit Commit Bot
Comment 3 2016-09-08 13:56:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.