Don't run transitions to or from undefined Lengths https://bugs.webkit.org/show_bug.cgi?id=161750 rdar://problem/28170460

Reviewed by Zalan Bujtas.

Source/WebCore:

For properties like max-height whose default value is 'none', we would erroneously
attempt to run transitions/animations, and then assert when one of the endpoints
was undefined.

So don't attempt to blend such Length values, just as do when they are auto.

Fixes some transitions on apple.com and developer.apple.com.

Test: transitions/transition-to-from-undefined.html

* page/animation/CSSPropertyAnimation.cpp:
(WebCore::CSSPropertyAnimation::blendProperties):
* platform/Length.cpp:
(WebCore::blend):

LayoutTests:

* transitions/transition-to-from-undefined-expected.txt: Added.
* transitions/transition-to-from-undefined.html: Added.


Canonical link: https://commits.webkit.org/179918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205659 268f45cc-cd09-0410-ab3c-d52691b4dbfc